--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <title>vue-quiz</title>
+    <title>Vue Quiz</title>
   </head>
   <body>
     <noscript>
